2007-02-16  Peter Johanson  <peter@peterjohanson.com>

	* gtk/CellRenderer*.custom: new custom overrides for VMs.
	* gtk/glue/cellrenderer.c: add GType parameters to the invoke methods
	so we can identify the correct vtable to invoke from.

2007-02-16  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs : switch to ToggleRefs for all items created with
	CreateNativeObject.  This gets all managed subclasses, with a little
	overhang into simple wrappers.
	* glib/ToggleRef.cs : new class to manage the weak to strong ref 
	transitions as a native object flips between shared and unshared
	ownership.
	* gtk/Object.custom : revamp of the Destroyed signal handling. 
	* gtk/Gtk.metadata : hide destroy signal so we can deal with it 
	manually. [Fixes the reopen note of #72018.]

2007-02-03  Mike Kestner  <mkestner@novell.com>

	* gtk/StatusIcon.custom : obsolete overload for backcompat on
	GetGeometry, and custom PresentMenu method to invoke new glue.
	* gtk/glue/statusicon.c : glue method to connect to gtk_menu_popup
	without having to go across the native/managed boundary multiple
	times using gtk_status_icon_position_menu wrapper.
	[Fixes #79500]

2007-02-02  Brad Taylor  <brad@getcoded.net>

	* gdk/Gdk.metadata: fix incorrect ref_count with Pixbuf's
	  RotateSimple method.

2007-01-09  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : add PersistUntilCalled method generation
	to the wrapper class.  Holds a GCHandle for the wrapper which is Freed
	when the delegate is invoked.
	* generator/MethodBody.cs : add "async" case for delegate scope.  Use
	this scope to identify a callback parameter that needs to persist 
	until the native side calls back.  Only valid for single-invoke
	callbacks.
	* gtk/Gtk.metadata : mark Print.RunPageSetupDialogAsync done_cb param
	with the new async scope.

2007-01-09  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoPixbuf.cs : use Marshal.Copy properly
	to avoid expose crashes. Revised from patch provided by