@@ -1,3 +1,8 @@
+2007-02-21  Peter Johanson  <peter@peterjohanson.com>
+
+	* gtk/glue/cellrenderer.c: revert to previous implementation of
+	_base_ functions to maintain backward-stability. [Fixes #77949]
+
 2007-02-16  Peter Johanson  <peter@peterjohanson.com>
 
 	* gtk/CellRenderer*.custom: new custom overrides for VMs.
